<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_id"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvSenderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sender_name"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvReceiverName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receiver_name"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="16sp" />

</LinearLayout>
